--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.7.3",
     "axios": "^0.18.0",
     "react": "^16.4.1",
+    "react-d3-scatterplot-matrix": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
