--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@data-ui/histogram": "0.0.75",
     "antd": "^3.7.3",
     "axios": "^0.18.0",
     "d3": "^5.7.0",
@@ -15,6 +16,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-vis": "^1.11.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
