--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@data-ui/histogram": "0.0.75",
     "@data-ui/xy-chart": "0.0.75",
+    "@vx/mock-data": "0.0.182",
     "antd": "^3.7.3",
     "axios": "^0.18.0",
     "d3": "^5.7.0",
     "d3-latest": "^5.0.4",
     "d3-svg-legend": "^2.25.6",
+    "mathjs": "^5.4.2",
     "prop-types": "latest",
     "react": "^16.4.1",
     "react-d3-scatterplot-matrix": "^1.0.0",
@@ -19,7 +21,8 @@
     "react-scripts": "1.1.4",
     "react-vis": "^1.11.6",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "statsjs": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
