--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,18 @@ django-rest-auth==0.9.3
 djangorestframework==3.8.2
 gunicorn==19.7.1
 idna==2.7
+numpy==1.16.0
 oauthlib==2.1.0
+pandas==0.23.4
 psycopg2==2.7.6.1
+python-dateutil==2.7.5
 python3-openid==3.1.0
 pytz==2018.5
 requests==2.19.1
 requests-oauthlib==1.0.0
+scikit-learn==0.20.2
+scipy==1.2.0
 six==1.11.0
+sklearn==0.0
 urllib3==1.23
 whitenoise==3.3.1
