--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
-os:
-  - linux
-python:
-  - '3.7'
+sudo: required
+dist: xenial
+python: "3.7"
 services: postgresql
 env:
   - DJANGO_VERSION=2.1.1
