--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - DJANGO_VERSION=2.1.1
 cache: pip
 install:
-  - pip install requirements.txt
+  - pip install -r requirements.txt
 script:
 
   - python manage.py makemigrations
