--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ cache: pip
 install:
   - pip install -r requirements.txt
 before_script:
-  - psql -c 'create database ml-duels;' -U postgres
+  - psql -c 'create database travisdb;' -U postgres
 script:
   - python manage.py test myApp
