--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ cache: pip
 install:
   - pip install -r requirements.txt
 before_script:
-  - psql -c 'create database travisdb;' -U postgres
+  - psql -c 'create database test_db;' -U postgres
 script:
+  - python manage.py makemigrations
+  - python manage.py migrate
   - python manage.py test duels
